--- a/src/style.css
+++ b/src/style.css
@@ -76,32 +76,63 @@ body {
   --border-radius: 50%;
   --ball-background:rgb(25, 25, 196);
   --text:white;
-  
+  --gap:4vh;
+  --ball-height:10vh;
+  --items-height:8vh;
+  --ball-font-size:2rem;
+  --items-font-size:1.5rem;
 
 }
 
 
 /* Ball styling */
 
+.menu-container{
+  position: fixed;
+  bottom: 10vh;
+  right: 5vw;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  gap: var(--gap);
+}
+
 .ball{
   border-radius:var(--border-radius);
   background-color:var(--ball-background);
   color: var(--text);
-  font-size: 2rem;
+  font-size: var(--ball-font-size);
   font-weight: 700;
-  height: 10vh;
+  height: var(--ball-height);
+  width: var(--ball-height);
   aspect-ratio: 1/1;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed;
-  bottom: 10vh;
-  right: 5vw;
   transition: 0.3s;
 }
 
 .ball.clicked{
   rotate: 45deg;
-  
+
+}
+
+.item{
+  display: none;
+  border-radius:var(--border-radius);
+  background-color:var(--ball-background);
+  color: var(--text);
+  font-size: var(--items-font-size);
+  font-weight: 700;
+  height: var(--items-height);
+  width: var(--items-height);
+  aspect-ratio: 1/1;
+  transition: 0.3s;
+}
+
+.item.show{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
    
