--- a/src/style.css
+++ b/src/style.css
@@ -72,20 +72,20 @@ body {
   transform: rotate(360deg) scale(1.2);
 }
 
+/* Menu styling */
+/* Delete hover stuff for phone */
+
 :root{
   --border-radius: 50%;
-  --ball-background:rgb(25, 25, 196);
+  --ball-background:rgb(121, 16, 170);
   --text:white;
   --gap:4vh;
-  --ball-height:10vh;
+  --ball-height:9vh;
   --items-height:8vh;
-  --ball-font-size:2rem;
+  --ball-font-size:1.9rem;
   --items-font-size:1.5rem;
 
 }
-
-
-/* Ball styling */
 
 .menu-container{
   position: fixed;
@@ -95,6 +95,7 @@ body {
   flex-direction: column-reverse;
   align-items: center;
   gap: var(--gap);
+  transition: 0.3s;
 }
 
 .ball{
@@ -109,30 +110,55 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: 0.3s;
+  transition: transform 0.3s;
+}
+
+.ball:hover{
+  transform: scale(1.1);
 }
 
 .ball.clicked{
-  rotate: 45deg;
-
+  transform: scale(1.1) rotate(45deg);
+ 
 }
 
+
+
 .item{
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(0);
   border-radius:var(--border-radius);
   background-color:var(--ball-background);
   color: var(--text);
-  font-size: var(--items-font-size);
   font-weight: 700;
-  height: var(--items-height);
-  width: var(--items-height);
+  font-size: 0px;
+  height: 0px;
+  width: 0px;
   aspect-ratio: 1/1;
-  transition: 0.3s;
+  transition: visibility 0s linear 0.4s, 
+  opacity 0.4s ease, 
+  transform 0.4s ease,
+  font-size 0.4s ease,
+  height 0.4s ease,
+  width 0.4s ease; 
 }
 
 .item.show{
+  visibility: visible;
+  opacity: 1;
+  transform: scale(1);
+  transition-delay: 0s;
+  font-size: var(--items-font-size);
+  height: var(--items-height);
+  width: var(--items-height);
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
+.item.show:hover{
+  transform: scale(1.1);
+}
+
    
